# OpenCLOpenCV

./: CMakeLists.txt  LICENSE  README.md  main.cpp  ocl_loader.h  sobel.cpp  sobel.h
opencl/: filterSepCol.cl  filterSepRow.cl  sepFilter3x3.cl
